<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="164dp"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvEncounterActiveHunt"
                android:text="@string/total_encounters"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/spinner"
                app:layout_constraintStart_toStartOf="parent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/linearLayoutEncounterButtons"
                app:layout_constraintTop_toBottomOf="@id/tvEncounterActiveHunt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/btnConfirmHunt">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/btnSubOne"
                    android:text="- 1"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:id="@+id/btnAddOne"
                    android:text="+ 1"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnBackActiveHunt"
                    android:layout_marginStart="16dp"
                    android:text="@string/back"/>
            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnConfirmHunt"
                android:text="@string/finish_hunt"
                android:backgroundTint="#4CAF50"
                android:layout_gravity="bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayoutEncounterButtons"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <!--
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnConfirmHunt2"
                android:text="@string/finish_hunt"
                android:backgroundTint="#4CAF50"
                android:layout_gravity="bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnConfirmHunt"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnConfirmHunt3"
                android:text="@string/finish_hunt"
                android:backgroundTint="#4CAF50"
                android:layout_gravity="bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnConfirmHunt2"
                app:layout_constraintBottom_toBottomOf="parent"/>
-->

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>